--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
     "name": "app-term-kit",
-    "version": "0.2.0",
+    "version": "0.3.0",
     "main": "app.js",
     "dependencies": {
         "ascii-art-ansi": "^1.4.1",
         "async": "^3.2.0",
         "comment-json": "^4.1.0",
+        "extended-emitter": "^1.0.4",
         "mkdirp": "^1.0.4",
         "npm": "^7.15.1",
         "rc": "^1.2.8",
