--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
     "name": "app-term-kit",
-    "version": "0.3.0",
+    "version": "0.3.1",
+    "author": "Abbey Hawk Sparrow <@khrome> (http://patternweaver.com)",
+    "description": "Utility for creating command line applications",
     "main": "app.js",
     "dependencies": {
         "ascii-art-ansi": "^1.4.1",
