--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-    "name": "app-term-kit",
-    "version": "0.4.2",
+    "name": "@protolus/terminal-app",
+    "version": "0.0.1",
     "author": "Abbey Hawk Sparrow <@khrome> (http://patternweaver.com)",
     "description": "Utility for creating command line applications",
     "main": "app.js",
     "dependencies": {
-        "ascii-art-ansi": "^1.4.1",
-        "async": "^3.2.0",
-        "comment-json": "^4.1.0",
+        "@ansi-art/tools": "^3.0.0-alpha1",
+        "comment-json": "^4.2.3",
         "extended-emitter": "^1.0.4",
-        "mkdirp": "^1.0.4",
-        "npm": "^7.15.1",
+        "mkdirp": "^2.1.6",
+        "npm": "^9.6.2",
         "rc": "^1.2.8",
-        "yargs": "^17.0.1"
+        "yargs": "^17.7.1"
     },
     "devDependencies": {
         "chai": "^4.3.6",
